--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -10,10 +10,8 @@ on:
       - '**'
 
 jobs:
-
   build_go:
     name: "🏗 Compile"
-
     runs-on: ubuntu-latest
     steps:
       - name: 🛒 Checkout Code
@@ -26,8 +24,35 @@ jobs:
           cache: true
           check-latest: true
 
+      # Cache Node modules
+      - name: 📦 Cache Node Modules
+        uses: actions/cache@v3
+        with:
+          path: frontend/node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('frontend/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
       - name: 🧹 Tidy
         run: go mod tidy
 
-      - name: 🤖 Build
+      - name: ⛵Install Wails v2
+        run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
+
+      - name: ⚙️ Install GTK and WebKit dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
+
+      - name: ⛵Build Wails
+        run: pwd && ls && wails build
+        working-directory: .
+
+      - name: 📦Npm Install
+        run: cd frontend && npm install
+
+      - name: 🪟Build React
+        run: cd frontend && npm run build
+
+      - name: 🤖 Build Go
         run: go build ./...
