--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -22,10 +22,24 @@ jobs:
         with:
           go-version: 1.21.4
 
-      - name: 🏗 Install dependencies
+      - name: 🏗 Install GTK and WebKit dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y xorg-dev libgl1-mesa-dev
+          sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
+
+      - name: ⛵Install Wails v2
+        run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
+
+      - name: ⛵Build Wails
+        run: pwd && ls && wails build
+        working-directory: .
+
+      - name: 📦Npm Install
+        run: cd frontend && npm install
+
+      - name: 🪟Build React
+        run: cd frontend && npm run build
 
       - name: Set up gotestfmt
         run: go install github.com/gotesttools/gotestfmt/v2/cmd/gotestfmt@latest
