feat: Add a new skeleton component for displaying diffs.
Switch the project to use scss,
Remove building of React and wails from linting GHA
Implement fetching of GitHub pull requests
Adjust GitHub actions

--- a/.github/workflows/go-test.yml
+++ b/.github/workflows/go-test.yml
@@ -32,7 +32,7 @@ jobs:
         run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
 
       - name: ⛵Build Wails
-        run: pwd && ls && wails build
+        run: npm install && ls && wails build
         working-directory: .
 
       - name: 📦Npm Install
