--- a/.github/workflows/go-build.yml
+++ b/.github/workflows/go-build.yml
@@ -45,7 +45,7 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
 
       - name: ⛵Build Wails
-        run: pwd && ls && wails build
+        run: npm install && ls && wails build
         working-directory: .
 
       - name: 📦Npm Install
