--- a/.github/workflows/go-lint.yml
+++ b/.github/workflows/go-lint.yml
@@ -52,12 +52,6 @@ jobs:
         with:
           node-version: '20.0.0'
 
-      - name: 🪟 Build React
-        run: |
-          cd frontend
-          npm install
-          npm run build
-
       - name: 📦 Cache Go Modules
         uses: actions/cache@v3
         with:
@@ -82,7 +76,7 @@ jobs:
           sudo apt-get install -y libgtk-3-dev libwebkit2gtk-4.0-dev
 
       - name: ⛵ Build Wails
-        run: wails build
+        run: npm install && ls && wails build
 
       - name: 🕵️‍♂️ Run GolangCI-Lint
         uses: golangci/golangci-lint-action@v3
