--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
   "dependencies": {
-    "diff": "^5.1.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/lab": "^5.0.0-alpha.161",
+    "@mui/material": "^5.15.5",
+    "react-bootstrap": "^2.10.0",
     "react-diff-view": "^3.2.0",
     "sass": "^1.70.0"
   }
 }
+
