--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@mui/material": "^5.15.5",
     "react-bootstrap": "^2.10.0",
     "react-diff-view": "^3.2.0",
+    "react-markdown": "^9.0.1",
     "sass": "^1.70.0"
   }
 }
-
